--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js",
+    "start": "node index.js",
+    "worker": "node ./worker/index.js",
+    "worker:seed": "node ./worker/scripts/seed.js",
+    "sink": "node ./sink/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "bullmq": "^5.58.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "ioredis": "^5.7.0",
+    "mongoose": "^8.17.1",
+    "pino": "^9.9.0",
+    "zod": "^4.0.17"
+  }
 }
